# code-dot-org

./: .drone.yml  .eslintrc.js  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Gemfile  README.md  SETUP.md  STYLEGUIDE.md  TESTING.md  cheap.dockerfile  cheap.txt  cheap2.txt  cheapskaffold.yaml  config.yml.erb  deployment.rb  docker-compose.yml  locals.yml.default  pyproject.toml  skaffold.yaml
.config/rubocop/: blocklist.yml  cdo_overrides.yml  config.yml  new.yml  todo.yml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  restore.sh
.devcontainer/frontend/: Dockerfile  compose.yml  devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/: ci_pipeline.yml  cms-build-docker.yml  design-system-ci.yml  frontend-build-docker.yml  release-marketing-app.yml  run_ui_tests.yml  skaffold_build.yml  toy.skaffold_build.yaml
apps/: .eslintrc.js  Gruntfile.js  envConstants.js  jest.config.js  karma.conf.js  lab2EntryPoints.ts  package.json  tsconfig.build.json  webpack.config.js  webpackEntryPoints.js
apps/.storybook/: decorators.d.ts  decorators.js
apps/script/: build-frontend-dependencies.sh  checkEntryPoints.js  convert-scss-variables.js  generateSharedConstants.rb
apps/src/: Globals.d.ts  StudioApp.js  block_utils.js  feedback.js  redux.js  required_block_utils.js  slider.js
apps/style/: common.scss
apps/tasks/: messages.js
apps/test/: setupJest.js
aws/: chef-bootstrap.sh  ci_build
aws/cloudformation/: README.md  bootstrap_chef_stack.sh.erb  cloud_formation_stack.yml.erb  data.yml.erb  iam.yml.erb  vpc.yml.erb
aws/dms/: tasks.yml
config/: adhoc.yml.erb  development.yml.erb  production.yml.erb  staging.yml.erb  test.yml.erb
config/global_editions/: en.yml  fa.yml  root.yml
cookbooks/: .rubocop.yml  Gemfile
cookbooks/cdo-apps/: metadata.rb
cookbooks/cdo-python/: metadata.rb
cookbooks/cdo-ruby/: README.md  metadata.rb
dashboard/: .gitignore
dashboard/config/: application.rb  database.yml  monkeypatch_state_machine.rb  routes.rb  videos.csv
dashboard/db/: schema.rb  schema_cache.yml
dashboard/lib/: certificate_image.rb  contact_rollups_v2.rb  international_opt_in_people.rb  level_loader.rb  projects_list.rb  script_constants.rb  sign_up_tracking.rb  user_multi_auth_helper.rb
dashboard/test/: test_helper.rb
docker/: README.md  setup-compose.yml  site-compose.yml  ui-tests-compose.yml  ui_tests.sh  unit-tests-compose.yml  unit_tests.sh
docker/ci/: Dockerfile
docker/continuous-integration/: Dockerfile
docker/developers/: .env  README.md  docker-compose.minio.yml  install-s3.sh
docs/: testing-with-applitools-eyes.md  update-levelbuilder.md
frontend/: .env.example  .gitignore  .npmrc  .nvmrc  .prettierignore  README.md  clean-package.config.json  package.json  tsup.config.ts  turbo.json
frontend/.changeset/: config.json
frontend/design-system/: .gitignore  package.json  tsconfig.json
i18n/: README.md
k8s/: README.md  TODO.md  code-dot-org-core.dockerfile  code-dot-org-db-seed.dockerfile  code-dot-org-static.dockerfile.dockerignore  code-dot-org.dockerfile  code-dot-org.dockerfile.dockerignore  code.org-core.dockerfile  code.org.dockerfile  code.org.dockerfile.dockerignore
k8s/apps/: cert-manager.yaml  kube-prometheus-stack.yaml  kustomization.yaml  metrics-server.yaml
k8s/argocd/: infra.yaml  kustomization.yaml
k8s/cloudformation/: cdo-k8s-install-argocd.yml  cdo-k8s.yaml  k8s-cdo.yaml
k8s/docker/: code-dot-org-core.dockerfile  code-dot-org-db-seed.dockerfile  code-dot-org-static.dockerfile  code-dot-org.dockerfile
k8s/github_actions/: skaffold_build.yml
k8s/toy/: README.md  (+5 more)
lib/: cdo.rb
pegasus/: config.ru  helpers.rb  router.rb
python/: README.md
python/pycdo/: pyproject.toml
python/pythonlab/neighborhood/: pyproject.toml
python/pythonlab/neighborhood/neighborhood/: __init__.py  painter.py
python/pythonlab/neighborhood/neighborhood/support/: color_helpers.py  direction.py  exception_key.py  grid.py  grid_factory.py  grid_helpers.py  grid_square.py  neighborhood_runtime_exception.py  neighborhood_signal_key.py  neighborhood_signal_message.py  signal_message_type.py  square_type.py  world.py
python/pythonlab/neighborhood/tests/: test_neighborhood_signal_message.py  test_painter.py
python/pythonlab/neighborhood/tests/support/: constants.py  serialized_maze.txt  test_color_helpers.py  test_direction.py  test_grid.py  test_grid_factory.py  test_grid_square.py  test_world.py
python/pythonlab/pythonlab_setup/: pyproject.toml
python/pythonlab/pythonlab_setup/pythonlab_setup/: __init__.py  patch_matplotlib.py  patch_requests.py  reset_neighborhood.py  setup_pythonlab.py  teardown_pythonlab.py
python/pythonlab/pythonlab_setup/tests/: test_patch_requests.py  test_reset_neighborhood.py
static-learn-2024/: index.html  learn.html
(+7463 files in other folders)
