[project]
name = "pycdo"
version = "0.1.0"
description = "python equivalent of lib/cdo"
authors = [
    { name = "Code.org Python Devs", email = "python-devs@code.org" }
]
requires-python = "==3.12.*"

dependencies = [
    "boto3",
    "numpy",
    "openai",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage",
    "ipython",
    "pytest >=8",
    "pytest-mock",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

