[project]
name = "neighborhood"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = []

[tool.pdm.dev-dependencies]
dev = [
    "coverage",
    "ipython",
    "pytest >=8",
    "pytest-mock",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
