[project]
name = "pythonlab_setup"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "matplotlib",
    "requests",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage",
    "ipython",
    "pytest >=8",
    "pytest-mock",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
